@@ -24,6 +24,9 @@ release.
 - The plugin list in the "Install Plugins" and "Update Plugins" dialog
   boxes is now categorized.
 
+- The Global Options dialog box now opens to display the most recently
+  viewed option pane. Also the "overview" pane is gone.
+
 + Bug Fixes:
 
 - The action "Insert Tab and Indent" was broken.
@@ -42,6 +45,11 @@ release.
 
 - "Rectangular selection mode" status message was not being shown on
   MacOS X.
+
++ API Additions:
+
+- You can now open the Global Options dialog box on a specified option
+  pane using the new GlobalOptions(View,String) constructor.
 
 * Version 4.1pre6
 
